--- a/resources/application.properties
+++ b/resources/application.properties
@@ -1,10 +1,10 @@
-# MySQL Datenbank Konfiguration
+# MySQL Database Config
 spring.datasource.url=jdbc:mysql://localhost:3306/databse_name?useSSL=false&serverTimezone=UTC
 spring.datasource.username=mysql_username
 spring.datasource.password=mysql_password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# JPA Konfiguration
+# JPA Config
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
